add maven exec java

--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,27 @@
 		</dependency>
 	</dependencies>
 
+	<build>
+		<defaultGoal>exec:java</defaultGoal>
+		<plugins>
+			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>exec-maven-plugin</artifactId>
+				<version>3.1.0</version>
+				<executions>
+					<execution>
+						<goals>
+							<goal>java</goal>
+						</goals>
+					</execution>
+				</executions>
+				<configuration>
+					<mainClass>org.example.Main</mainClass>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
+
 	<profiles>
 		<profile>
 			<id>jar</id>
