--- a/pom.xml
+++ b/pom.xml
@@ -12,10 +12,12 @@
 		<maven.compiler.source>17</maven.compiler.source>
 		<maven.compiler.target>17</maven.compiler.target>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<app.version>${project.version}</app.version>
 		<exec-maven-plugin.version>3.1.0</exec-maven-plugin.version>
 		<maven-assembly-plugin.version>3.4.2</maven-assembly-plugin.version>
 		<native-maven-plugin.version>0.9.19</native-maven-plugin.version>
 		<maven-compiler-plugin.version>3.6.1</maven-compiler-plugin.version>
+		<properties-maven-plugin.version>1.1.0</properties-maven-plugin.version>
 		<picocli.version>4.7.0</picocli.version>
 	</properties>
 
@@ -53,6 +55,24 @@
 				<configuration>
 					<mainClass>org.example.Main</mainClass>
 				</configuration>
+			</plugin>
+
+			<!-- writes file with application version needed for picocli's "-V" -->
+			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>properties-maven-plugin</artifactId>
+				<version>${properties-maven-plugin.version}</version>
+				<executions>
+					<execution>
+						<phase>generate-resources</phase>
+						<goals>
+							<goal>write-project-properties</goal>
+						</goals>
+						<configuration>
+							<outputFile>${project.build.outputDirectory}/app.properties</outputFile>
+						</configuration>
+					</execution>
+				</executions>
 			</plugin>
 		</plugins>
 	</build>
