--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -19,6 +19,7 @@ jobs:
           version: '22.3.0'
           java-version: '17'
           components: 'native-image'
+          cache: 'maven'
           github-token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: 'Build & Test'
